--- a/dev/srcDS/data/meta.yaml
+++ b/dev/srcDS/data/meta.yaml
@@ -1,5 +1,5 @@
 title: sampetulla.com data science portfolio
-introtext: Data science-specific portfolio projects in addition to the work on the front page.
+introtext: Hello. You've found my supplementary data science portfolio. Below, find analysis case studies, interactive explanations and articles on advertising measurement.
 nav:
  item: Analysis
  item1: Explorables
