--- a/dev/src/data/meta.yaml
+++ b/dev/src/data/meta.yaml
@@ -1,5 +1,5 @@
 title: sampetulla.com
-introtext: 👋 I am an editor for CNN who uses data analysis and graphics to find and tell stories. I work on small and large projects and think about how to bring together small teams that can tackle ambitious data projects.</p><p>In my spare time, I like learning new statistical methods and programming languages and baking pies. I've given <a href="https://github.com/petulla/stroke-dasharray-interpolation-talk">talks on D3.js</a>, and <a href="https://schedule.srccon.org/#_session-stats-newsroom">regression</a> and <a href="https://web.archive.org/web/20150816124525/http://visualized.com/politicaldata">statistics</a> in the newsroom. I try to keep a running series of experiments on <a href="https://beta.observablehq.com/@petulla">Observable</a>.
+introtext: 👋 I am a data scientist CNN. In my past life, I was an editor at CNN Politics and NBC News. I've given <a href="https://github.com/petulla/stroke-dasharray-interpolation-talk">talks on D3.js</a>, and <a href="https://schedule.srccon.org/#_session-stats-newsroom">regression</a> and <a href="https://web.archive.org/web/20150816124525/http://visualized.com/politicaldata">statistics</a> in the newsroom. I try to keep a running series of experiments on <a href="https://beta.observablehq.com/@petulla">Observable</a>.
 nav:
  item: Graphics
  item1: Writing
