--- a/dev/src/data/meta.yaml
+++ b/dev/src/data/meta.yaml
@@ -1,5 +1,5 @@
 title: sampetulla.com
-introtext: 👋 I am a data scientist for WarnerMedia at CNN. In my past life, I was an editor at CNN Politics and NBC News. </p><p>This is a sample of my public portfolio. I've taught and spoken <a href="https://github.com/petulla/stroke-dasharray-interpolation-talk">about D3.js</a>, <a href="https://generalassemb.ly/instructors/sam-petulla/2106">analytics</a> and <a href="https://schedule.srccon.org/#_session-stats-newsroom">regression</a> and <a href="https://web.archive.org/web/20150816124525/http://visualized.com/politicaldata">statistics</a>. 
+introtext: 👋 I am a data scientist for WarnerMedia at CNN. In my past life, I was an editor at CNN Politics and NBC News. </p><p>These days, I mostly focus on Python and PyTorch, but below you can see some interactive explorables, packages and articles I made. 
 nav:
  item: DS 
  item1: Open-source
