--- a/dev/src/data/projects.yaml
+++ b/dev/src/data/projects.yaml
@@ -6,7 +6,7 @@ graphics:
  geopovertyintro:
   text: Geography of Poverty (through nw chapter)
   summary: summary
-  url: http://www.msnbc.com/interactives/geography-of-poverty/index.html
+  url: https://web.archive.org/web/20170601000000*/https://www.msnbc.com/interactives/geography-of-poverty/index.html
  ustrump:
   text: United States of Trump
   summary: summary
