--- a/dev/src/data/meta.yaml
+++ b/dev/src/data/meta.yaml
@@ -1,5 +1,5 @@
 title: sampetulla.com
-introtext: 👋 I am a machine learning engineer working for Columbia University\'s Brown Institute. I was previously a data scientist at WarnerMedia and a politics editor at CNN and NBC News. Find some of my explorables below.
+introtext: 👋 I am a data scientist working for Columbia University\'s Brown Institute. I was previously a data scientist at WarnerMedia and a politics editor at CNN and NBC News. Find some of my explorables below.
 nav:
  item: DS 
  item1: Open-source
